# verisimdb-debugger

./: AI.djot  Cargo.toml  LICENSE  README.adoc
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  codeql.yml  generator-generic-ossf-slsa3-publish.yml  ghcr-publish.yml  publish-aur.yml  publish-chocolatey.yml  publish-copr.yml  publish-debian-ppa.yml  publish-flatpak.yml  publish-homebrew.yml  publish-macports.yml  publish-nixpkgs.yml  publish-obs.yml  publish-packages.yml  publish-scoop.yml  publish-winget.yml  release.yml  rust-ci.yml  scorecard-enforcer.yml  workflow-linter.yml  zig-ffi.yml
.machine_readable/: ECOSYSTEM.scm  STATE.scm
src/: main.rs
tests/: integration_test.rs
